나눔명조 폰트 https

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ An AMP HTML tutorial - learn the different building blocks of an AMP HTML file. 
         </style>
         </noscript>
         <style amp-custom>
-        @import url("http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css");
+        @import url("https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css");
         @import url('https://fonts.googleapis.com/css?family=Cinzel');
 
         body {
@@ -219,7 +219,7 @@ An AMP HTML tutorial - learn the different building blocks of an AMP HTML file. 
                             this.currentTime = 0;
                             this.play();
                         }, false);
-                        
+
                         audio.play();
                     }
                 }
