--- a/index.html
+++ b/index.html
@@ -301,20 +301,35 @@ An AMP HTML tutorial - learn the different building blocks of an AMP HTML file. 
                 <div class="outer">
                     <div class="inner">
                         <div class="centered">
+							<div>
                             <amp-img
                                 src="/assets/images/company_logo.png?static=1"
                                 alt="Company Logo" width="357px" height="370px"
                                 />
-                            </div>
+								</div>
+								<div>
+							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="5F2A2LERZA49J">
+							<table>
+							<tr><td><input type="hidden" name="on0" value="Steam Key Mail Adress">Steam Key Mail Adress</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+							<tr><td><input type="hidden" name="on1" value="Ending Credit Name">Ending Credit Name</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+							</table>
+							<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+							<img alt="" border="0" src="https://www.paypalobjects.com/ko_KR/i/scr/pixel.gif" width="1" height="1">
+							</form>
+							</div>
                         </div>
                     </div>
-                </section>
+                </div>
+            </section>
 
                 <section>
                     <div class="outer">
                         <div class="inner">
                             <div class="centered">
                                 <h2>피아니스트</h2>
+								
                                 <p class="longText">
                                     38살의 해진 정장을 입은 피아니스트.
                                     <br />
